--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>soundpasta</title>
+    <script type="text/javascript" src="/quietjs/quiet.js"></script>
+    <script async type="text/javascript" src="/quietjs/quiet-emscripten.js"></script>
   </head>
   <body>
     <div id="root"></div>
